# DBusFramework

./: CMakeLists.txt  Dockerfile
src/: dbus.pro  dbusframeworkadaptor.cpp  dbusframeworkadaptor.h  main.cpp
